--- a/trunk/Languages/default-gr.xml
+++ b/trunk/Languages/default-gr.xml
@@ -456,7 +456,7 @@
 				<separator/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
-				<item id="ID_HELP_WEB_3" text="Slyck.com"/>
+				
 			</menu>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Σχετικά με το Shareaza..."/>
@@ -531,18 +531,24 @@
 			<item id="ID_WINDOW_MONITOR" text="Δείξε την _Οθόνη"/>
 			<item id="ID_WINDOW_REMOTE" text="Δείξε την _Remote bar"/>
 		</menu>
-		<menu text="_Βοήθεια">
-			<item id="ID_HELP_FAQ" text="Ο _οδηγός του Shareaza"/>
-			<item id="ID_HELP_FORUMS" text="Shareaza _Forums"/>
-			<item id="ID_HELP_FIREWALLS" text="Βοήθεια για το _Router"/>
-			<item id="ID_HELP_SECURITY" text="Βοήθεια για την _Ασφάλεια"/>
+		<menu text="_Guides">
+			<item id="ID_HELP_FAQ" text="Shareaza _FAQ"/> 
+                        <separator/> 
+                        <menu text="_Guides"> 
+                        <item id="ID_HELP_GUIDE" text="Shareaza _Users Guide"/> 
+                        <item id="ID_HELP_ROUTER" text="_Router Help"/> 
+                        <item id="ID_HELP_SECURITY" text="_Security Help"/> 
+                        <item id="ID_HELP_CODEC" text="_Codec Help"/> 
+                        </menu>
 			<separator/>
 			<menu text="_Ιστοσελίδες">
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
 				<separator/>
-				<item id="ID_HELP_WEB_1" text="File Sharing Portal"/>
-				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
-				<item id="ID_HELP_WEB_3" text="Slyck.com"/>
+				<item id="ID_HELP_FORUMS" text="Shareaza _Forums"/>
+				<item id="ID_HELP_UPDATE" text="Latest news"/>
+				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
+                                <item id="ID_HELP_WEB_2" text="P2PForums.com"/> 
+
 			</menu>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Σχετικά με το Shareaza..."/>
@@ -612,18 +618,23 @@
 			<item id="ID_WINDOW_REMOTE" text="Δείξε την _Remote bar"/>
 		</menu>
 		<menu text="_Βοήθεια">
-			<item id="ID_HELP_FAQ" text="Ο _οδηγός του Shareaza"/>
-			<item id="ID_HELP_FORUMS" text="Shareaza _Forums"/>
-			<item id="ID_HELP_FIREWALLS" text="Βοήθεια για το _Router"/>
-			<item id="ID_HELP_SECURITY" text="Βοήθεια για την _Ασφάλεια"/>
+			<item id="ID_HELP_FAQ" text="Shareaza _FAQ"/> 
+                        <separator/> 
+                        <menu text="_Guides"> 
+                        <item id="ID_HELP_GUIDE" text="Shareaza _Users Guide"/> 
+                        <item id="ID_HELP_ROUTER" text="_Router Help"/> 
+                        <item id="ID_HELP_SECURITY" text="_Security Help"/> 
+                        <item id="ID_HELP_CODEC" text="_Codec Help"/> 
+                        </menu>
 			<separator/>
 			<menu text="_Ιστοσελίδες">
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
 				<separator/>
-				<item id="ID_HELP_WEB_1" text="File Sharing Portal"/>
-				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
-				<item id="ID_HELP_WEB_3" text="Slyck.com"/>
-			</menu>
+				<item id="ID_HELP_FORUMS" text="Shareaza _Forums"/> 
+                                <item id="ID_HELP_UPDATE" text="Latest news"/> 
+                                <item id="ID_HELP_WEB_1" text="Zeropaid.com"/> 
+                                <item id="ID_HELP_WEB_2" text="P2PForums.com"/>                                  
+                                </menu>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Σχετικά με το Shareaza..."/>
 		</menu>
@@ -2048,8 +2059,11 @@
 		still download properly, although some file names could be incorrect.</text>
 		<newline gap="8"/>
 		<text>Most torrent creation programs should allow you to repair this torrent, which
-		will ensure it works properly in all BitTorrent applications. Check the Shareaza forums 
-		if you require additional help.</text>
+		will ensure it works properly in all BitTorrent applications.</text>
+		<newline gap="8"/>
+                <link target="http://www.shareaza.com/help/?torrentencoding">Click here for additional
+            help</link>
+                <text>, or to download software to repair the torrent.</text>
 	</document>
 
 	<document name="GeneralHelp.DonkeyServerList">
