--- a/trunk/Languages/default-lt.xml
+++ b/trunk/Languages/default-lt.xml
@@ -21,7 +21,7 @@ right quote	&#147;
 		description="Shareaza Lithuanian Skin File"
 		link="http://www.shareaza.com/"
 		email="rrol2002(at)hotmail(dot)com"
-		version="2.1.0.149"
+		version="2.1.0.150"
 		type="Language"
 		language="lt"
 		prompt="Paspauskite čia, jei Jūsų gimtoji kalba lietuvių."
@@ -459,17 +459,22 @@ right quote	&#147;
 			<item id="ID_TOOLS_SETTINGS" text="„_Shareaza“ nuostatos..."/>
 		</menu>
 		<menu text="Ži_nynas">
-			<item id="ID_HELP_FAQ" text="„Shareaza“ _vartotojo vadovas"/>
-			<item id="ID_HELP_FORUMS" text="„Shareaza“ _forumai"/>
-			<item id="ID_HELP_FIREWALLS" text="Pagalba apie _maršrutizatorius"/>
-			<item id="ID_HELP_SECURITY" text="_Pagalba apie apsaugą"/>
+			<item id="ID_HELP_FAQ" text="„Shareaza“ _DUK"/>
+			<separator/>
+			<menu text="_Vadovai">
+				<item id="ID_HELP_GUIDE" text="„Shareaza“ _vartotojo vadovas"/>
+				<item id="ID_HELP_ROUTER" text="Pagalba apie _maršrutizatorius"/>
+				<item id="ID_HELP_SECURITY" text="_Pagalba apie apsaugą"/>
+				<item id="ID_HELP_CODEC" text="Pagalba apie _kodekus"/>
+			</menu>
 			<separator/>
 			<menu text="Tinkla_lapiai">
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
 				<separator/>
+				<item id="ID_HELP_FORUMS" text="„Shareaza“ _forumai"/>
+				<item id="ID_HELP_UPDATE" text="Paskutinės naujienos"/>
 				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
-				<item id="ID_HELP_WEB_3" text="Slyck.com"/>
 			</menu>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Apie „Shareaza“..."/>
@@ -545,17 +550,22 @@ right quote	&#147;
 			<item id="ID_WINDOW_REMOTE" text="Rodyti _pultelį"/>
 		</menu>
 		<menu text="Ži_nynas">
-			<item id="ID_HELP_FAQ" text="„Shareaza“ _vartotojo vadovas"/>
-			<item id="ID_HELP_FORUMS" text="„Shareaza“ _forumai"/>
-			<item id="ID_HELP_FIREWALLS" text="Pagalba apie _maršrutizatorius"/>
-			<item id="ID_HELP_SECURITY" text="_Pagalba apie apsaugą"/>
+			<item id="ID_HELP_FAQ" text="„Shareaza“ _DUK"/>
+			<separator/>
+			<menu text="_Vadovai">
+				<item id="ID_HELP_GUIDE" text="„Shareaza“ _vartotojo vadovas"/>
+				<item id="ID_HELP_ROUTER" text="Pagalba apie _maršrutizatorius"/>
+				<item id="ID_HELP_SECURITY" text="_Pagalba apie apsaugą"/>
+				<item id="ID_HELP_CODEC" text="Pagalba apie _kodekus"/>
+			</menu>
 			<separator/>
 			<menu text="Tinkla_lapiai">
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
 				<separator/>
-				<item id="ID_HELP_WEB_1" text="Bylų mainų portalas"/>
+				<item id="ID_HELP_FORUMS" text="„Shareaza“ _forumai"/>
+				<item id="ID_HELP_UPDATE" text="Paskutinės naujienos"/>
+				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
-				<item id="ID_HELP_WEB_3" text="Slyck.com"/>
 			</menu>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Apie „Shareaza“..."/>
@@ -625,17 +635,22 @@ right quote	&#147;
 			<item id="ID_WINDOW_REMOTE" text="Rodyti _pultelį"/>
 		</menu>
 		<menu text="Ži_nynas">
-			<item id="ID_HELP_FAQ" text="„Shareaza“ _vartotojo vadovas"/>
-			<item id="ID_HELP_FORUMS" text="„Shareaza“ _forumai"/>
-			<item id="ID_HELP_FIREWALLS" text="Pagalba apie _maršrutizatorius"/>
-			<item id="ID_HELP_SECURITY" text="_Pagalba apie apsaugą"/>
+			<item id="ID_HELP_FAQ" text="„Shareaza“ _DUK"/>
+			<separator/>
+			<menu text="_Vadovai">
+				<item id="ID_HELP_GUIDE" text="„Shareaza“ _vartotojo vadovas"/>
+				<item id="ID_HELP_ROUTER" text="Pagalba apie _maršrutizatorius"/>
+				<item id="ID_HELP_SECURITY" text="_Pagalba apie apsaugą"/>
+				<item id="ID_HELP_CODEC" text="Pagalba apie _kodekus"/>
+			</menu>
 			<separator/>
 			<menu text="Tinkla_lapiai">
 				<item id="ID_HELP_HOMEPAGE" text="_Shareaza.com"/>
 				<separator/>
-				<item id="ID_HELP_WEB_1" text="Bylų mainų portalas"/>
+				<item id="ID_HELP_FORUMS" text="„Shareaza“ _forumai"/>
+				<item id="ID_HELP_UPDATE" text="Paskutinės naujienos"/>
+				<item id="ID_HELP_WEB_1" text="Zeropaid.com"/>
 				<item id="ID_HELP_WEB_2" text="P2PForums.com"/>
-				<item id="ID_HELP_WEB_3" text="Slyck.com"/>
 			</menu>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_Apie „Shareaza“..."/>
@@ -1489,7 +1504,7 @@ right quote	&#147;
 			ir negali priimti susijungimų iš Interneto. &#160;</text>
 			<text colour="FF0000" format="b">Tai gali sumažinti atsisiuntimų našumą.</text>
 			<newline gap="6"/>
-			<link target="raza:command:ID_HELP_FIREWALLS">Paspauskite čia, jei norite sužinoti, kaip suderinti savo maršrutizatorių ar užkardą</link>
+			<link target="raza:command:ID_HELP_ROUTER">Paspauskite čia, jei norite sužinoti, kaip suderinti savo maršrutizatorių ar užkardą</link>
 			<newline gap="18" indent="0"/>
 		</group>
 
@@ -2071,7 +2086,7 @@ right quote	&#147;
 		<text>Dauguma torrent bylų kūrimo programų turėtų leisti pataisyti šią torrent bylą. Pataisymas garantuotų,
 		kad ji deramai dirbs visose BitTorrent programose.</text>
 		<newline gap="8"/>
-		<link target="http://www.shareaza.com/torrentencoding/">Spauskite čia, jei reikalinga pagalba</link>
+		<link target="http://www.shareaza.com/torrentencoding">Spauskite čia, jei reikalinga pagalba</link>
 		<text>&#160;arba jei norite parsisiųsti torrent bylų taisymo programų.</text>
 	</document>
 
@@ -2234,15 +2249,20 @@ right quote	&#147;
 	<tip id="ID_DOWNLOADS_URL" message="Pridėti šaltinio adresą prie pasirinktos bylos..."/>
 	<tip id="ID_DOWNLOADS_VIEW_REVIEWS" message="Peržvelgti pasirinktos bylos įvertinimus."/>
 	<tip id="ID_HELP_ABOUT" message="Rodyti „Apie ‚Shareaza‘“ dialogo langą..."/>
-	<tip id="ID_HELP_FAQ" message="Atverti naršyklėje „Shareaza“ vartotojo vadovą."/>
-	<tip id="ID_HELP_FIREWALLS" message="Sužinokite, kaip sukonfigūruoti savo maršrutizatorių ar užkardą."/>
+	<tip id="ID_HELP_CODEC" message="Viskas apie kodekus ir video problemas."/>
+	<tip id="ID_HELP_FAQ" message="Atverti naršyklėje „Shareaza“ DUK puslapį."/>
+	<tip id="ID_HELP_ROUTER" message="Sužinokite, kaip sukonfigūruoti savo maršrutizatorių ar užkardą."/>
 	<tip id="ID_HELP_FORUMS" message="Apsilankyti „Shareaza“ diskusijų forumuose."/>
+	<tip id="ID_HELP_GUIDE" message="Atverti naršyklėje „Shareaza“ vartotojo vadovą."/>
 	<tip id="ID_HELP_HOMEPAGE" message="Aplankyti Shareaza.com tinklalapį."/>
-	<tip id="ID_HELP_SECURITY" text="Sužinokite, kaip apsisaugoti nuo kenkėjų tinkluose"/>
-	<tip id="ID_HELP_WEB_1" message="Aplankyti Zeropaid.com"/>
-	<tip id="ID_HELP_WEB_2" message="Aplankyti P2PForums.com"/>
-	<tip id="ID_HELP_WEB_3" message="Aplankyti Slyck.com"/>
-	<tip id="ID_HELP_WEB_4" message="Aplankyti NapJunk.net"/>
+	<tip id="ID_HELP_SECURITY" message="Sužinokite, kaip apsisaugoti nuo kenkėjų tinkluose."/>
+	<tip id="ID_HELP_UPDATE" message="Sužinokite naujienas ir apie atnaujinimus."/>
+	<tip id="ID_HELP_WEB_1" message="Aplankyti šią svetainę"/>
+	<tip id="ID_HELP_WEB_2" message="Aplankyti šią svetainę"/>
+	<tip id="ID_HELP_WEB_3" message="Aplankyti šią svetainę"/>
+	<tip id="ID_HELP_WEB_4" message="Aplankyti šią svetainę"/>
+	<tip id="ID_HELP_WEB_5" message="Aplankyti šią svetainę"/>
+	<tip id="ID_HELP_WEB_6" message="Aplankyti šią svetainę"/>
 	<tip id="ID_HITMONITOR_CLEAR" message="Valyti kreipinių monitoriaus buferį."/>
 	<tip id="ID_HITMONITOR_PAUSE" message="Pristabdyti kreipinių stebėjimą."/>
 	<tip id="ID_HITMONITOR_SEARCH" message="Ieškoti tinkle pasirinkto termino."/>
@@ -3127,7 +3147,7 @@ right quote	&#147;
 
 	<dialog name="CGeneralSettingsGroup" cookie="" caption="Bendra"/>
 
-	<dialog name="CGeneralSettingsPage" cookie="BuBuBuBuStCoBuBuBuBuBuBuBuBuSyStEdmsStmsBuStCoStCo" caption="Bendra">
+	<dialog name="CGeneralSettingsPage" cookie="BuBuBuBuStCoBuBuBuBuBuBuBuBuBuSyStEdmsStmsBuStCoStCo" caption="Bendra">
 		<control caption="_Bendra:"/>
 		<control caption="Paleidus „Shareaza“, jungtis prie tinklo"/>
 		<control caption="Paleisti „Shareaza“ startuojant Windows"/>
@@ -3136,6 +3156,7 @@ right quote	&#147;
 		<control caption="bitai/sek.|baitai/sek.|b/s|B/s|Kb/s|KB/s|Mb/s|MB/s"/>
 		<control caption="_Atsisiuntimai:"/>
 		<control caption="Visada išskleisti naujų bylų šaltinių medį"/>
+		<control caption="Rodyti supaprastintą progreso juostą"/>
 		<control caption="_Paieška:"/>
 		<control caption="Visada išskleisti šaltinių medį"/>
 		<control caption="Eiti prie siuntimų pridėjus naują bylą"/>
